generated starter code for ignite using windsurf/sonnet3.7